@@ -4,6 +4,14 @@ h1. Release Notes for Sirius
 
 This document contains the release notes for recent major releases of Sirius. See also "the release notes from previous versions":Release_Notes_Previous.html for details about older releases.
 
+h2(#sirius7.0.7). Changes in Sirius 7.0.7
+
+h3. User-Visible Changes
+
+h3. Specifier-Visible Changes
+
+h3. Developer-Visible Changes
+
 h2(#sirius7.0.6). Changes in Sirius 7.0.6
 
 h3. User-Visible Changes
